kubernetes/apps/home/mealie/app/ingress.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-external
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik-ext.damacus.io
spec:
  ingressClassName: external
  rules:
    - host: mealie.damacus.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  number: 9000
  tls:
    - hosts:
        - mealie.damacus.io
