kubernetes/apps/home/mealie/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.32.1/networkpolicy-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mealie
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/controller: mealie
      app.kubernetes.io/instance: mealie
      app.kubernetes.io/name: mealie
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 9000
          protocol: TCP
